# tensorrt-optimization-toolkit

./: .clang-format  .env.example  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CompilerSettings.cmake  FindTensorRT.cmake
docs/: building.md  debugging_accuracy_drops.md  int8_calibration.md  plugin_development.md
examples/: 01_resnet50_fp16.cpp  02_yolov8_int8_calibration.cpp  03_dynamic_batch.cpp  04_custom_plugin.cpp
include/trt_toolkit/accuracy/: diff_reporter.hpp  two_engine_diff.hpp
include/trt_toolkit/benchmark/: latency_probe.hpp  memory_probe.hpp  throughput_probe.hpp
include/trt_toolkit/builder/: binary_folder_calibrator.hpp  dynamic_shapes.hpp  engine_builder.hpp  int8_calibrator.hpp
include/trt_toolkit/debug/: engine_inspector.hpp  onnx_inspector.hpp
include/trt_toolkit/plugin/: gelu_plugin.hpp  plugin_registry.hpp
include/trt_toolkit/runner/: trt_runner.hpp
include/trt_toolkit/utils/: cuda_helpers.hpp  logger.hpp
src/accuracy/: diff_reporter.cpp  two_engine_diff.cpp
src/benchmark/: latency_probe.cpp  memory_probe.cpp  throughput_probe.cpp
src/builder/: binary_folder_calibrator.cpp  dynamic_shapes.cpp  engine_builder.cpp  int8_calibrator.cpp
src/debug/: engine_inspector.cpp  onnx_inspector.cpp
src/plugin/: gelu_kernel.cpp  gelu_plugin.cu.cpp  plugin_registry.cpp
src/runner/: trt_runner.cpp
src/utils/: cuda_helpers.cpp  logger.cpp
tools/: trt_toolkit_cli.cpp
